offset error message to prevent overlap with nav bar

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -8,6 +8,14 @@ html {
     height: 100%;
 }
 
+
+.alert {
+  margin-bottom: 4px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  margin-top: 4em;
+}
+
 .navbar {
     width:100%;
     position:fixed;
